--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "bitecs": "^0.3.38",
+    "phaser": "^3.55.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "regenerator-runtime": "^0.13.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
